Web Scrapping News with Splinter

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,14 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
     "import os\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "import requests"
+    "from splinter import Browser\n",
+    "import requests\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Splinter for Windows Users\n",
+    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Splinter for Mac Users\n",
+    "#!which chromedriver\n",
+    "#executable_path = {'executable_path': '/usr/local/bin/chromedriver'}\n",
+    "#browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
@@ -21,121 +46,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
-    "url = 'https://mars.nasa.gov/news/'\n",
+    "NASA_News_url = 'https://mars.nasa.gov/news/'\n",
+    "browser.visit(NASA_News_url)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Soup Object from the NASA Mars News URL\n",
+    "html = browser.html\n",
+    "NASA_Mars_News = bs(html, 'html.parser')\n",
     "\n",
-    "# Retrieve page with the requests module\n",
-    "response = requests.get(url)\n",
-    "# Create BeautifulSoup object; parse with 'lxml'\n",
-    "nasa_news = bs(response.text, 'lxml')\n",
-    "#print(nasa_news)"
+    "\n",
+    "# Confirm successful creationg of soup object.\n",
+    "#print(NASA_Mars_News.prettify())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#view url content information\n",
-    "#print(response.status_code)\n",
-    "#print(response.headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Now, let us store the page content of the websiet access\n",
-    "#from requests to a variable:\n",
-    "src=response.content\n",
-    "\n",
-    "#Now that we have the page source stored, we can use BeautifulSoup module to parse and process the source.\n",
-    "#To do this, we need to create a BeautifulSoup object based on the source variable.\n",
-    "nasa_news = bs(src, 'lxml')\n",
-    "#nasa_news = bs(src, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Now that the page source has been processed via BS\n",
-    "#we can access specific information directly from it.  For example, you can \n",
-    "#pull all of the links on the page\n",
-    "#links = nasa_news.find_all(\"a\")\n",
-    "links = nasa_news.select\n",
-    "#print(links)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\n\\nNASA Invites Students to Name Mars 2020 Rover\\n\\n'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NASA's Mars 2020 Rover Completes Its First Drive\n"
+     ]
     }
    ],
    "source": [
-    "# Use the parent element to find the first a tag and save it as `news_title`\n",
-    "news_title = nasa_news.find(\"div\", class_='content_title').get_text()\n",
-    "news_title"
+    "news_title = NASA_Mars_News.find('div', class_ = 'content_title').text\n",
+    "print(news_title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Use the parent element to find the paragraph text\n",
-    "news_p = nasa_news.find_all(class_=\"article_teaser_body\")\n",
-    "news_p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.\n"
      ]
     }
    ],
    "source": [
-    "test = nasa_news.find_all(class_=\"article_teaser_body\")\n",
-    "print(test)"
+    "news_p = NASA_Mars_News.find('div', class_ = 'article_teaser_body').text\n",
+    "print(news_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JPL Mars Space Images - Featured Image"
    ]
   },
   {
