Mars JPL Image Capture

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -11,7 +11,8 @@
     "from bs4 import BeautifulSoup as bs\n",
     "from splinter import Browser\n",
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import time"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "NASA_News_url = 'https://mars.nasa.gov/news/'\n",
-    "browser.visit(NASA_News_url)\n",
-    "\n"
+    "browser.visit(NASA_News_url)\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "# Create Soup Object from the NASA Mars News URL\n",
     "html = browser.html\n",
-    "NASA_Mars_News = bs(html, 'html.parser')\n",
+    "NASA_Mars_News_soup = bs(html, 'html.parser')\n",
     "\n",
     "\n",
     "# Confirm successful creationg of soup object.\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "news_title = NASA_Mars_News.find('div', class_ = 'content_title').text\n",
+    "news_title = NASA_Mars_News_soup.find('div', class_ = 'content_title').text\n",
     "print(news_title)"
    ]
   },
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "news_p = NASA_Mars_News.find('div', class_ = 'article_teaser_body').text\n",
+    "news_p = NASA_Mars_News_soup.find('div', class_ = 'article_teaser_body').text\n",
     "print(news_p)"
    ]
   },
@@ -112,6 +112,102 @@
    "metadata": {},
    "source": [
     "### JPL Mars Space Images - Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to visit\n",
+    "JPL_Mars_Images_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(JPL_Mars_Images_url)\n",
+    "time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Click on first button\n",
+    "browser.click_link_by_id('full_image')\n",
+    "time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Click again\n",
+    "browser.click_link_by_partial_text('more info')\n",
+    "time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Soup Object from the JPL Mars Space Images URL\n",
+    "html = browser.html\n",
+    "JPL_Mars_Images_soup = bs(html, 'html.parser')\n",
+    "\n",
+    "# Confirm successful creationg of soup object.\n",
+    "#print(JPL_Mars_Images_soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<img alt=\"A dying star, called the Helix nebula, is shown surrounded by the tracks of asteroids in an image captured by NASA's WISE. Skirting around the edges of the Helix nebula are the footprints of asteroids marching across the field of view.\" class=\"main_image\" src=\"/spaceimages/images/largesize/PIA17564_hires.jpg\" title=\"A dying star, called the Helix nebula, is shown surrounded by the tracks of asteroids in an image captured by NASA's WISE. Skirting around the edges of the Helix nebula are the footprints of asteroids marching across the field of view.\"/>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the relative image url\n",
+    "relative_img_url = JPL_Mars_Images_soup.select_one('figure.lede a img')\n",
+    "relative_img_url\n",
+    "\n",
+    "#I found that the execution of this code is unreliable unless I put in some delays.  Maybe I am wrong.\n",
+    "time.sleep(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17564_hires.jpg'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "figure = JPL_Mars_Images_soup.find('figure')\n",
+    "relative_mars_image_url = figure.find('a')['href']\n",
+    "mars_image_url = f'https://www.jpl.nasa.gov{relative_mars_image_url}'\n",
+    "mars_image_url"
    ]
   },
   {
