--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,23 +393,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-109ddd60b5ee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmars_hemisphere_title\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMars_Hemisphere_soup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'h'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'itemLink product-item'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mars_hemisphere_title = Mars_Hemisphere_soup.find('h', class_ = 'itemLink product-item').text"
+    "\n",
+    "# Retreive all items that contain mars hemispheres information\n",
+    "hemisphere_items = Mars_Hemisphere_soup.find_all('div', class_='item')\n",
+    "\n",
+    "# Create empty list for hemisphere urls \n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# Store the main_ul \n",
+    "hemispheres_main_url = 'https://astrogeology.usgs.gov'\n",
+    "\n",
+    "# Loop through the items previously stored\n",
+    "for i in items: \n",
+    "    # Store title\n",
+    "    title = i.find('h3').text\n",
+    "    \n",
+    "    # Store link that leads to full image website\n",
+    "    partial_img_url = i.find('a', class_='itemLink product-item')['href']\n",
+    "    \n",
+    "    # Visit the link that contains the full image website \n",
+    "    browser.visit(hemispheres_main_url + partial_img_url)\n",
+    "    \n",
+    "    # HTML Object of individual hemisphere information website \n",
+    "    partial_img_html = browser.html\n",
+    "    \n",
+    "    # Parse HTML with Beautiful Soup for every individual hemisphere information website \n",
+    "    soup = BeautifulSoup( partial_img_html, 'html.parser')\n",
+    "    \n",
+    "    # Retrieve full image source \n",
+    "    img_url = hemispheres_main_url + soup.find('img', class_='wide-image')['src']\n",
+    "    \n",
+    "    # Append the retreived information into a list of dictionaries \n",
+    "    hemisphere_image_urls.append({\"title\" : title, \"img_url\" : img_url})"
    ]
   },
   {
