Final pass on hemisphere image list

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,34 +401,83 @@
     "# Retreive all items that contain mars hemispheres information\n",
     "hemisphere_items = Mars_Hemisphere_soup.find_all('div', class_='item')\n",
     "\n",
-    "# Create empty list for hemisphere urls \n",
+    "# Create an empty list to store scraped hemisphere urls \n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "# Store the main_ul \n",
+    "# Variable for the main web site \n",
     "hemispheres_main_url = 'https://astrogeology.usgs.gov'\n",
-    "\n",
-    "# Loop through the items previously stored\n",
-    "for i in items: \n",
-    "    # Store title\n",
-    "    title = i.find('h3').text\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through the hemisphere items\n",
+    "for i in hemisphere_items: \n",
+    "    # Store hemisphere title\n",
+    "    hemisphere_title = i.find('h3').text\n",
     "    \n",
     "    # Store link that leads to full image website\n",
     "    partial_img_url = i.find('a', class_='itemLink product-item')['href']\n",
     "    \n",
-    "    # Visit the link that contains the full image website \n",
+    "    # Visit the complete image url \n",
     "    browser.visit(hemispheres_main_url + partial_img_url)\n",
     "    \n",
-    "    # HTML Object of individual hemisphere information website \n",
+    "    # Create HTML Object of individual hemisphere image information \n",
     "    partial_img_html = browser.html\n",
     "    \n",
-    "    # Parse HTML with Beautiful Soup for every individual hemisphere information website \n",
-    "    soup = BeautifulSoup( partial_img_html, 'html.parser')\n",
+    "    # Create soup object using partial image url \n",
+    "    partial_img_soup = bs( partial_img_html, 'html.parser')\n",
     "    \n",
-    "    # Retrieve full image source \n",
-    "    img_url = hemispheres_main_url + soup.find('img', class_='wide-image')['src']\n",
+    "    # Create complete image source url\n",
+    "    complete_img_url = hemispheres_main_url + partial_img_soup.find('img', class_='wide-image')['src']\n",
     "    \n",
-    "    # Append the retreived information into a list of dictionaries \n",
-    "    hemisphere_image_urls.append({\"title\" : title, \"img_url\" : img_url})"
+    "    # Add title/image url dictionaries to hemisphere_image_urls list\n",
+    "    hemisphere_image_urls.append({\"title\" : hemisphere_title, \"img_url\" : complete_img_url})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}, {'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}, {'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}, {'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check to see that the list of dictionaries look like\n",
+    "print(hemisphere_image_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NOT NEEDED\n",
+    "#Create dataframe from the hemisphere image url list of dictionaries\n",
+    "#hemisphere_image_url_df = pd.DataFrame(hemisphere_image_urls)\n",
+    "#hemisphere_image_url_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NOT NEEDED\n",
+    "#Convert hemisphere image url dataframe to html\n",
+    "#hemisphere_image_url_df.to_html('Mars_Hemisphere_image_urls.html')"
    ]
   },
   {
